<resources>
    <string name="title_dialog_location_setting_disabled">Enable location</string>
    <string name="title_dialog_location_permission_disabled">Permissions</string>
    <string name="title_confirmed_bid_details_banner">Your bid is confirmed</string>
    <string name="title_dialog_delete_route">Delete Route ?</string>
    <string name="title_dialog_logout">Confirm Logout</string>
    <string name="title_support">Need help? </string>
    <string name="title_dialog_delete">Confirm Delete</string>
    <string name="title_dialog_update">Update Available</string>
    <string name="title_dialog_invalid_num">Invalid phone number</string>
    <string name="title_dialog_supplier_disabled">User Disabled</string>
    <string name="title_dialog_supplier_not_approved">User Not Approved</string>
    <string name="title_dialog_ledger_sent">Ledger Sent successfully</string>
    <string name="title_dialog_apply_filter">Apply filter</string>
    <string name="title_dialog_delete_member">Delete Member</string>
    <string name="title_account_setup">Account Setup</string>
    <string name="title_enter_route_details">Enter route details</string>
    <string name="title_contracts_details">Contract Details</string>
    <string name="title_submit_details">Submit Details</string>
    <string name="msg_hello_world">Message Hello World</string>
    <string name="msg_user_added">User added successfully</string>
    <string name="msg_dialog_location_setting_disabled">Your location is set to &lt;b>“off”&lt;/b>. Please enable location to use the app&lt;br>&lt;br></string>
    <string name="msg_dialog_location_permission_disabled">Allow &lt;b>AXLE app&lt;/b> to access your location?&lt;br>&lt;br> Location will be used to determine the best loads for you.</string>
    <string name="msg_send_otp_auth">Please use the registered number if are already an AXLE partner</string>
    <string name="msg_contact_terms_auth">We need your phone number for verifying you before getting started. We will not share your number outside.</string>
    <string name="msg_otp_sent_to_phone_no">We’ve sent an OTP via SMS to:\n +91 %1$s</string>
    <string name="msg_loading_pro_tip">Pro tip:\n%s</string>
    <string name="msg_select_route_welcome_user">Welcome\n%s</string>
    <string name="msg_glad_to_onboard">Glad too see you onboarded with Axle</string>
    <string name="msg_select_route_pref_to_load">We would need your route preferences to fetch the best possible load requests for you.</string>
    <string name="msg_pickup_location_city_based">We will show you the nearby pickup locations based on the city you enter.</string>
    <string name="msg_use_location_as_origin_city">Use my current location as the origin city</string>
    <string name="msg_be_first_to_bid">Be the first to Bid</string>
    <string name="msg_no_bids_received">No bids received yet.</string>
    <string name="msg_bids_received_till_now">%1$d bids received till now</string>
    <string name="unallocated_bulk_order">Bulk Load:</string>
    <string name="msg_you_have_not_placed_any_bid">You have not placed any bid</string>
    <string name="msg_ensure_truck_statuses_are_updated">Ensure the truck statuses are updated.</string>
    <string name="msg_confirmed_bid_details_banner">Our AXLE executive will be calling you to finalise the truck details. Keep the details ready</string>
    <string name="msg_no_trips_bid_smartly">Bid smartly and win to get your trucks on the trips…</string>
    <string name="msg_dialog_delete_route">The load requests belonging to this route will not be shown on the dashboard post deletion.</string>
    <string name="msg_dialog_logout">You are signing out of Delfin app.</string>
    <string name="msg_dialog_support"> Please reach out to our support team </string>
    <string name="msg_delete_account"> Are you sure you want to delete your account? \n </string>
    <string name="msg_dialog_delete">Are you sure you want to delete this user ?</string>
    <string name="msg_dialog_update">A newer version of this app exists. Please click on update to continue using Axle.</string>
    <string name="msg_dialog_invalid_num">You have entered an invalid number. Please check the number used. To become an Axle partner, please call or message us</string>
    <string name="msg_dialog_supplier_disabled">Your profile has been disabled. To enable please call or message us</string>
    <string name="msg_dialog_supplier_not_approved">Your KYC is not yet complete. To enable please call or message us</string>
    <string name="msg_no_bids_found">Keep bidding to get more loads..</string>
    <string name="msg_add_nearby_locations">​​Choose the nearby cities for which you also provide truck.</string>
    <string name="msg_add_nearby_locations_deselect">Please deselect the locations where you don’t serve.</string>
    <string name="msg_select_route_destinations">​​Select states for which you provide trucks</string>
    <string name="msg_view_edit_route_prefs">View and edit your route preferences</string>
    <string name="msg_you_lost_bid">You lost the bid</string>
    <string name="msg_your_bid">Your bid: ₹ </string>
    <string name="msg_under_dev">More features will be added soon. Your patience is appreciated.</string>
    <string name="msg_alerts_under_dev">We are working hard to get the live notifications for your trips.</string>
    <string name="msg_home_under_dev">Home screen is coming soon with exciting features.</string>
    <string name="msg_image_capture_failed">Unable to capture image</string>
    <string name="msg_file_upload_failed">File Upload Failed</string>
    <string name="msg_file_upload_successful">File Uploaded Successfully</string>
    <string name="msg_pick_image_intent_text">Pick Image</string>
    <string name="msg_call_permission">Please provide permission to call</string>
    <string name="msg_notification_permission">Please provide permission to get notification</string>
    <string name="storage_permission">Please provide storage permission</string>
    <string name="storage_camera_permission">Please provide storage and camera permission</string>
    <string name="msg_more_bids_with_this_bid">%1$d more bid placed on this order</string>
    <string name="msg_ask_admin">Ask the Admin user to Add a new User or Enable a user for Fuel Payout</string>
    <string name="msg_deactivate">Are you sure you want to deactivate this truck?</string>
    <string name="msg_reason_deactivate">Select your reason for deactivating the truck</string>
    <string name="msg_other_source_reason">Load received from different source</string>
    <string name="msg_others">Other</string>
    <string name="msg_enter_unloading_details">Enter unloading destination details</string>
    <string name="msg_priority_access_to_loads">Need priority access to loads?</string>
    <string name="msg_add_trucks_banner">Add your trucks &amp; gain exclusive one hour access to loads</string>
    <string name="msg_empty_field">Field can\'t be empty</string>
    <string name="msg_truck_add_success">Truck added successfully!</string>
    <string name="incorrect_vehicle_number">Invalid Truck Number</string>
    <string name="msg_volume_of_bids">Total volume of Bids : \n%.1f MT</string>
    <string name="msg_verified_pan_name">  PAN Holder Name - %1$s.</string>
    <string name="msg_view_third_party_loads">Enable to view third party market loads</string>
    <string name="msg_privacy_policy"> Our Privacy Policy outlines what personal data we collect, why we collect it, and how we use it. Our Conditions of Use govern your use of this application.</string>
    <string name="msg_more"><![CDATA[%1$s<font color=\'#A3AAC2\'> +%2$d more </font>]]> </string>
    <string name="msg_more_reporting_centers"><![CDATA[%1$s<font color=\'#121A31\'> (+%2$d centers)</font>]]> </string>
    <string name="hint_hello_world">Hint Hello World</string>
    <string name="hint_name">Name</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_otp_digit" />
    <string name="hint_enter_city_name">Enter city name</string>
    <string name="hint_search_load">Search load</string>
    <string name="hint_search_contracts">Search contract</string>
    <string name="hint_search_trips">Vehicle / Destination / LR </string>
    <string name="hint_search_trip">Search Trip</string>
    <string name="hint_search_bids">Origin / Destination</string>
    <string name="hint_enter_bid_value">Enter bid value (₹)</string>
    <string name="hint_enter_pmt_rate_value">Enter PMT rate value (₹ PMT)</string>
    <string name="hint_amount">23900</string>
    <string name="hint_user_name">Enter user name</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_search_trucks">Search truck by number</string>
    <string name="hint_pmt_price">Enter PMT rate</string>
    <string name="hint_ftl_price">Enter Full Vehicle Rate</string>
    <string name="hint_price">Enter rate</string>
    <string name="hint_enter_name">Enter name</string>
    <string name="hint_number">Enter number</string>
    <string name="hint_diesel">Enable to register them for diesel card</string>
    <string name="hint_enter_origin">Enter origin city</string>
    <string name="hint_enter_destination">Enter destination city or state</string>
    <string name="hint_select_multi_cities">You can select multiple cities/states</string>
    <string name="hint_rep_time">Vehicle available in</string>
    <string name="hint_select_time">Select Time</string>
    <string name="hint_search">Search</string>
    <string name="rep_time">Vehicle Reporting Time</string>
    <string name="hint_proof"> Do not upload proofs of Delhivery trips</string>
    <string name="action_activate_truck">Request for Load</string>
    <string name="action_share_rate">+ Share Rate</string>
    <string name="action_deactivate_truck">Deactivate Truck</string>
    <string name="action_edit_truck">Edit Truck</string>
    <string name="action_add_truck">+ Add Truck</string>
    <string name="action_add_truck_button">Add Truck</string>
    <string name="action_add_vehicle_type">+ Vehicle Type</string>
    <string name="action_continue">Continue</string>
    <string name="label_nav_bids">Bids</string>
    <string name="label_nav_trips">Trips</string>
    <string name="label_nav_pods">PODs</string>
    <string name="label_home">Home</string>
    <string name="label_placements">Placements</string>
    <string name="label_filter_title">Filter</string>
    <string name="label_filter_type">Type</string>
    <string name="label_filter_credit">Credit</string>
    <string name="label_filter_debit">Debit</string>
    <string name="label_filter_date_range">Date Range</string>
    <string name="label_filter_today">Today</string>
    <string name="label_filter_yesterday">Yesterday</string>
    <string name="label_filter_this_week">This Week</string>
    <string name="label_filter_last_week">Last Week</string>
    <string name="label_filter_this_month">This Month</string>
    <string name="label_filter_last_month">Last Month</string>
    <string name="label_filter_last_90_days">Last 90 Days</string>
    <string name="label_filter_apply">Apply</string>
    <string name="upload_file_format_info">JPEG • 10MB • PDF/Photo • 5MB</string>
    <string name="action_close">Close</string>
    <string name="know_your_vehicle_title">Know Your Vehicle</string>
    <string name="upload_fastag_image_title">Upload your FASTag image</string>
    <string name="upload_fastag_image_label">Upload FASTag Image</string>
    <string name="submit_for_verification">Submit for Verification</string>
    <string name="rc_upload_failed_title">RC upload failed</string>
    <string name="rc_upload_failed_subtitle">We couldn\'t process your RC document. Please upload a different, clearer photo of your RC and try again.</string>
    <string name="rc_upload_try_again">Try again</string>
    <string name="rc_upload_maybe_later">Maybe later</string>
</resources>