<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_dialog"
    android:orientation="vertical"
    android:paddingBottom="@dimen/size_16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/size_24dp"
        android:paddingTop="@dimen/size_24dp"
        android:paddingEnd="@dimen/size_24dp"
        android:paddingBottom="@dimen/size_16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/label_filter_title"
            android:textColor="@color/heading_black"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close"
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            bind:srcCompat="@drawable/ic_close" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginBottom="@dimen/size_12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/label_filter_type"
        android:textColor="@color/heading_black"
        android:textSize="@dimen/text_14sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginEnd="@dimen/size_24dp"
        bind:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_credit"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/label_filter_credit"
            android:textColor="@color/chip_text_color"
            bind:chipBackgroundColor="@color/chip_background_color"
            bind:chipStrokeColor="@color/chip_stroke_color"
            bind:chipStrokeWidth="1dp"
            bind:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_debit"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/label_filter_debit"
            android:textColor="@color/chip_text_color"
            bind:chipBackgroundColor="@color/chip_background_color"
            bind:chipStrokeColor="@color/chip_stroke_color"
            bind:chipStrokeWidth="1dp"
            bind:chipCornerRadius="20dp" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:layout_marginBottom="@dimen/size_12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/label_filter_date_range"
        android:textColor="@color/heading_black"
        android:textSize="@dimen/text_14sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginEnd="@dimen/size_24dp"
        bind:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_today"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/label_filter_today"
            android:textColor="@color/chip_text_color"
            bind:chipBackgroundColor="@color/chip_background_color"
            bind:chipStrokeColor="@color/chip_stroke_color"
            bind:chipStrokeWidth="1dp"
            bind:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_yesterday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/label_filter_yesterday"
            android:textColor="@color/chip_text_color"
            bind:chipBackgroundColor="@color/chip_background_color"
            bind:chipStrokeColor="@color/chip_stroke_color"
            bind:chipStrokeWidth="1dp"
            bind:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_this_week"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/label_filter_this_week"
            android:textColor="@color/chip_text_color"
            bind:chipBackgroundColor="@color/chip_background_color"
            bind:chipStrokeColor="@color/chip_stroke_color"
            bind:chipStrokeWidth="1dp"
            bind:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_last_week"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/label_filter_last_week"
            android:textColor="@color/chip_text_color"
            bind:chipBackgroundColor="@color/chip_background_color"
            bind:chipStrokeColor="@color/chip_stroke_color"
            bind:chipStrokeWidth="1dp"
            bind:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_this_month"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/label_filter_this_month"
            android:textColor="@color/chip_text_color"
            bind:chipBackgroundColor="@color/chip_background_color"
            bind:chipStrokeColor="@color/chip_stroke_color"
            bind:chipStrokeWidth="1dp"
            bind:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_last_month"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/label_filter_last_month"
            android:textColor="@color/chip_text_color"
            bind:chipBackgroundColor="@color/chip_background_color"
            bind:chipStrokeColor="@color/chip_stroke_color"
            bind:chipStrokeWidth="1dp"
            bind:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_last_90_days"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/label_filter_last_90_days"
            android:textColor="@color/chip_text_color"
            bind:chipBackgroundColor="@color/chip_background_color"
            bind:chipStrokeColor="@color/chip_stroke_color"
            bind:chipStrokeWidth="1dp"
            bind:chipCornerRadius="20dp" />

    </com.google.android.material.chip.ChipGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:background="@color/bg_grey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:backgroundTint="@color/head_black"
        android:fontFamily="sans-serif-medium"
        android:text="@string/label_filter_apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16sp"
        bind:cornerRadius="@dimen/size_12dp" />

</LinearLayout>

</layout>
