<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_dialog">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:padding="@dimen/size_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/msg_deactivate"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8dp"
                app:srcCompat="@drawable/ic_close_black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_4dp"
            app:srcCompat="@drawable/seperator_line"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_reason_deactivate"
            android:paddingStart="@dimen/size_14dp"
            android:paddingEnd="@dimen/size_14dp"
            android:paddingTop="@dimen/size_14dp"/>

       <RadioGroup
           android:id="@+id/deactivate_group"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingStart="@dimen/size_14dp"
           android:paddingEnd="@dimen/size_14dp"
           android:layout_marginTop="@dimen/size_6dp">
           <RadioButton
               android:id="@+id/other_source"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/msg_other_source_reason"/>
           <RadioButton
               android:id="@+id/other"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/msg_others"/>
       </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_deactivate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_14dp"
            android:text="@string/action_deactivate_truck"
            android:textAllCaps="false"
            android:background="@drawable/bg_boundary_red"
            android:textColor="@color/bid_placed_red"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>